# wolf

./: .gitignore  README.md  pyproject.toml
app/: main.py  settings.py
app/advisor/: advisor.py  genai.py
app/advisor/analyst/: autonomous.py  base.py  model.py
app/advisor/analyst/chain/: analyst.py  base.py
app/data/instrument/: instrument.py  provider.py
app/logger/: config.py
app/portfolio/: asset.py
