[project]
name = "wolf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "lxml-html-clean>=0.4.5",
    "newspaper3k>=0.2.8",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.5.1",
]
